[project]
name = "tagentacle-py-agent"
version = "0.1.0"
description = "Agent SDK — MessageQueue, InferenceMux, ContextFactory"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "tagentacle-py-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120
